style: :lipstick: style buttons in login form
- Updated the "Connecte-toi" button to match the text field's style with a border radius of 18, black border, and shadow. - Set the button background color to #FF5935 and text color to black. - Adjusted padding for the button to match text fields. - Refactored the SVG buttons to have a consistent style with rounded corners, a black border, and shadow.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   supabase_flutter: ^2.8.0
   provider: ^6.0.5
   flutter_dotenv: ^5.0.2
+  flutter_svg: ^2.0.12
 
 dev_dependencies:
   flutter_test:
