--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   provider: ^6.0.5
   flutter_dotenv: ^5.0.2
   flutter_svg: ^2.0.12
+  carousel_slider: ^5.0.0
 
 dev_dependencies:
   flutter_test:
