--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_dotenv: ^5.0.2
   flutter_svg: ^2.0.12
   carousel_slider: ^5.0.0
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
