feat: :sparkles: update UI components and structure
- Renamed `Home.dart` to `home.dart` for consistency with naming conventions. - Added custom font support for 'Sora' in regular, bold, and extra-bold weights. - Updated UI layout for product carousel in `home.dart`:   - Adjusted spacing and alignment of SVG icons and labels.   - Set a flexible width with ellipsis for long text labels.   - Improved visual consistency and centered content in each carousel item. - Added new SVG assets to enhance UI. - Updated `product.dart` to include `theme_product` for better product theming.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -89,8 +89,10 @@ flutter:
     - family: Sora
       fonts:
          - asset: assets/fonts/Sora.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+         - asset: assets/fonts/Sora-Bold.ttf
+           weight: 700
+         - asset: assets/fonts/Sora-ExtraBold.ttf
+           weight: 900
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
