--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,12 @@ dependencies:
   flutter_svg: ^2.0.12
   carousel_slider: ^5.0.0
   intl: ^0.19.0
+  flutter_launcher_icons: ^0.14.2
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/logo/BricoVoisinLogo.png"
 
 dev_dependencies:
   flutter_test:
